best-practices-vpol/require-drop-cap-net-raw/.chainsaw-test/bad-pod-corner-init.yaml
apiVersion: v1
kind: Pod
metadata:
  name: add-capabilities-good
spec:
  automountServiceAccountToken: false
  containers:
  - name: init
    image: ghcr.io/kyverno/test-busybox:1.35
    securityContext:
      capabilities:
        drop:
          - CAP_NET_RAW
  - name: init-again
    image: ghcr.io/kyverno/test-busybox:1.35
