best-practices-vpol/require-drop-cap-net-raw/.chainsaw-test/bad-pod-corner.yaml
apiVersion: v1
kind: Pod
metadata:
  name: add-capabilities-bad-001
spec:
  automountServiceAccountToken: false
  containers:
  - name: add-capabilities
    image: ghcr.io/kyverno/test-busybox:1.35
    securityContext:
      capabilities:
        drop:
          - CAP_NET_RAW
  - name: add-capabilities-again
    image: ghcr.io/kyverno/test-busybox:1.35
    securityContext:
      capabilities:
        drop:
          - CAP_NET_RAW
