best-practices-vpol/require-drop-cap-net-raw/.chainsaw-test/bad-pod-initcontainers.yaml
apiVersion: v1
kind: Pod
metadata:
  name: add-capabilities-bad-1
spec:
  initContainers:
  - name: init
    image: ghcr.io/kyverno/test-busybox:1.35
    securityContext:
      capabilities:
        add: ["SYS_TIME"]
        drop:
          - CAP_NET_RAW
  - name: init2
    image: ghcr.io/kyverno/test-busybox:1.35
  containers:
  - name: add-capabilities
    image: ghcr.io/kyverno/test-busybox:1.35
    securityContext:
      capabilities:
        add: ["SYS_TIME"]
        drop:
          - CAP_NET_RAW
---
apiVersion: v1
kind: Pod
metadata:
  name: add-capabilities-bad-2
spec:
  initContainers:
  - name: init
    image: ghcr.io/kyverno/test-busybox:1.35
  - name: init2
    image: ghcr.io/kyverno/test-busybox:1.35
    securityContext:
      capabilities:
        add: ["SYS_TIME"]
        drop:
          - CAP_NET_RAW
  containers:
  - name: add-capabilities
    image: ghcr.io/kyverno/test-busybox:1.35
    securityContext:
      capabilities:
        add: ["SYS_TIME"]
        drop:
          - CAP_NET_RAW
