best-practices-vpol/require-drop-cap-net-raw/.chainsaw-test/bad-podcontrollers.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dropall-baddeployment01
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      initContainers:
      - name: init
        image: ghcr.io/kyverno/test-busybox:1.35
        securityContext:
          capabilities:
            add: ["SYS_TIME"]
            drop:
              - CAP_NET_RAW
      - name: init2
        image: ghcr.io/kyverno/test-busybox:1.35
        securityContext:
          capabilities:
            add: ["SYS_TIME"]
            drop:
              - CAP_NET_RAW
      containers:
      - name: add-capabilities
        image: ghcr.io/kyverno/test-busybox:1.35
        securityContext:
          capabilities:
            add: ["SYS_TIME"]
            drop:
              - CAP_NET_RAW
      - name: add-capabilities-again
        image: ghcr.io/kyverno/test-busybox:1.35
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dropall-baddeployment02
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      initContainers:
      - name: init
        image: ghcr.io/kyverno/test-busybox:1.35
        securityContext:
          capabilities:
            add: ["SYS_TIME"]
            drop:
              - CAP_NET_RAW
      - name: init2
        image: ghcr.io/kyverno/test-busybox:1.35
      containers:
      - name: add-capabilities
        image: ghcr.io/kyverno/test-busybox:1.35
        securityContext:
          capabilities:
            add: ["SYS_TIME"]
            drop:
              - CAP_NET_RAW
      - name: add-capabilities-again
        image: ghcr.io/kyverno/test-busybox:1.35
        securityContext:
          capabilities:
            add: ["SYS_TIME"]
            drop:
              - CAP_NET_RAW
---
apiVersion: batch/v1
kind: CronJob
metadata:
  name: dropall-badcronjob01
spec:
  schedule: "*/1 * * * *"
  jobTemplate:
    spec:
      template:
        spec:
          restartPolicy: OnFailure
          initContainers:
          - name: init
            image: ghcr.io/kyverno/test-busybox:1.35
            securityContext:
              capabilities:
                add: ["SYS_TIME"]
                drop:
                  - CAP_NET_RAW
          - name: init2
            image: ghcr.io/kyverno/test-busybox:1.35
          containers:
          - name: add-capabilities
            image: ghcr.io/kyverno/test-busybox:1.35
            securityContext:
              capabilities:
                add: ["SYS_TIME"]
                drop:
                  - CAP_NET_RAW
          - name: add-capabilities-again
            image: ghcr.io/kyverno/test-busybox:1.35
            securityContext:
              capabilities:
                add: ["SYS_TIME"]
                drop:
                  - CAP_NET_RAW
---
apiVersion: batch/v1
kind: CronJob
metadata:
  name: dropall-badcronjob02
spec:
  schedule: "*/1 * * * *"
  jobTemplate:
    spec:
      template:
        spec:
          restartPolicy: OnFailure
          initContainers:
          - name: init
            image: ghcr.io/kyverno/test-busybox:1.35
            securityContext:
              capabilities:
                add: ["SYS_TIME"]
                drop:
                  - CAP_NET_RAW
          - name: init2
            image: ghcr.io/kyverno/test-busybox:1.35
            securityContext:
              capabilities:
                add: ["SYS_TIME"]
                drop:
                  - CAP_NET_RAW
          containers:
          - name: add-capabilities
            image: ghcr.io/kyverno/test-busybox:1.35
            securityContext:
              capabilities:
                add: ["SYS_TIME"]
                drop:
                  - CAP_NET_RAW
          - name: add-capabilities-again
            image: ghcr.io/kyverno/test-busybox:1.35
